KNOX-1442 - Enable forbiddenapis for static build checking
Signed-off-by: Kevin Risden <krisden@apache.org>